force-app/main/default/objects/Training__c/fields/Duration_hrs__c.field-meta.xml
<CustomField>
    <fullName>Duration_hrs__c</fullName>
    <label>Duration (hrs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>