force-app/main/default/objects/Training__c/fields/Trainer_Provider__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Provider__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trainer / Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>