force-app/main/default/objects/Training__c/fields/Training_Type__c.field-meta.xml
<CustomField>
    <fullName>Training_Type__c</fullName>
    <label>Training Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Soft Skill</fullName>
            </value>
            <value>
                <fullName>Certification Prep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>